# lore

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.server  PUBLISHING.md  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  release-pypi.yml
_bmad/: config.yaml
_bmad-output/: e1-graph-visualization-architecture.md  e1-graph-visualization-prd.md  e1-graph-visualization-qa-report.md  e1-graph-visualization-stories.md  e2-recent-activity-architecture.md  e2-recent-activity-prd.md  e2-recent-activity-qa-report.md  e2-recent-activity-stories.md  e3-e4-sprint3-architecture.md  e3-e4-sprint3-prd.md  e3-e4-sprint3-qa-report.md  e3-e4-sprint3-stories.md  e5-export-snapshot-architecture.md  e5-export-snapshot-prd.md  e5-export-snapshot-qa-report.md  e5-export-snapshot-stories.md  e6-approval-ux-architecture.md  e6-approval-ux-prd.md  e6-approval-ux-qa-report.md  e6-approval-ux-stories.md  v1.0-product-brief.md
_bmad-output/implementation-artifacts/: f01-knowledge-graph-architecture-v2.md  f01-knowledge-graph-architecture.md  f01-knowledge-graph-stories-v2.md  f01-knowledge-graph-stories.md  f02-fact-extraction-architecture.md  f02-fact-extraction-stories.md  f03-consolidation-architecture.md  f03-consolidation-stories.md  f04-memory-tiers-architecture.md  f04-memory-tiers-stories.md  f05-importance-scoring-architecture.md  f05-importance-scoring-stories.md  f06-metadata-enrichment-architecture.md  f06-metadata-enrichment-stories.md  f07-webhook-ingestion-architecture.md  f07-webhook-ingestion-stories.md  f08-cross-tool-docs-architecture.md  f09-dialog-classification-architecture.md  f09-dialog-classification-stories.md  f10-prompt-export-architecture.md  f10-prompt-export-stories.md  qa-report.md  stories.md  v07-f01-architecture.md  v07-f01-stories.md  v07-f02-architecture.md  v07-f02-stories.md  v07-f03-architecture.md  v07-f03-stories.md  v08-architecture.md  v08-conversation-extract-architecture.md  v08-conversation-extract-stories.md
_bmad-output/planning-artifacts/: architecture.md  epics-and-stories.md  f01-knowledge-graph-prd.md  f02-fact-extraction-prd.md  f03-consolidation-prd.md  f04-memory-tiers-prd.md  f05-importance-scoring-prd.md  f06-metadata-enrichment-prd.md  f07-webhook-ingestion-prd.md  f08-cross-tool-docs-prd.md  f09-dialog-classification-prd.md  f10-prompt-export-prd.md  implementation-readiness-report.md  prd.md  product-brief.md  (+4 more)
benchmarks/: run_benchmarks.py
docs/: api-reference.md  architecture.md  benchmarks.md  conversation-extract.md  environment-variables.md  mcp-setup.md  migration-v0.5-to-v0.6.md  quickstart.md  self-hosted.md  setup-chatgpt.md  setup-claude-code.md  setup-claude-desktop.md  setup-cline.md  setup-codex.md  setup-cursor.md  setup-openclaw.md  setup-vscode.md  setup-warp.md  setup-windsurf.md  troubleshooting.md
examples/: basic_usage.py  claude_desktop_config.json  claude_desktop_config_remote.json  consolidation_demo.py  cursor_mcp.json  cursor_mcp_remote.json  custom_embeddings.py  full_pipeline.py  generic_mcp_config.json  mcp_tool_tour.py  redaction_demo.py  webhook_ingestion.py
hooks/: lore-capture-end.sh  lore-capture-prompt.sh  lore-precompact.ts
migrations/: 001_initial.sql  004_sharing.sql  005_oidc_and_rbac.sql  006_importance_scoring.sql  006_openbrain_pivot.sql  007_knowledge_graph.sql  008_conversation_jobs.sql  009_rename_to_memories.sql  010_retrieval_analytics.sql  011_approval_ux.sql  012_slo_config.sql  013_retrieval_profiles.sql  014_review_decisions.sql  015_retention_policies.sql  016_workspaces.sql  017_recommendations.sql  018_profile_extras.sql  019_recommendation_config_null_safe_unique.sql  020_fts_index.sql  021_fts_weight.sql  022_dream_runs.sql  023_memory_supersessions.sql  024_scope_and_kind.sql  025_drop_quality_score_columns.sql  026_visibility.sql  027_relationship_supersessions.sql  028_org_scope_graph.sql
migrations_sqlite/: 001_initial.sql  004_sharing.sql  005_oidc_and_rbac.sql  006_importance_scoring.sql  007_knowledge_graph.sql  008_conversation_jobs.sql  009_rename_to_memories.sql  010_retrieval_analytics.sql  011_approval_ux.sql  012_slo_config.sql  013_retrieval_profiles.sql  014_review_decisions.sql  015_retention_policies.sql  016_workspaces.sql  017_recommendations.sql  018_profile_extras.sql  019_recommendation_config_null_safe_unique.sql  020_fts_index.sql  021_fts_weight.sql  022_dream_runs.sql  023_memory_supersessions.sql  024_scope_and_kind.sql  025_drop_quality_score_columns.sql  026_visibility.sql  027_relationship_supersessions.sql  028_org_scope_graph.sql
scripts/: backfill_graph.py  check_migrations_parity.py  check_routes_no_sql.py  generate_embedding_fixtures.py  install-mac.sh
tests/: conftest.py  test_agentlens_emit.py  test_bootstrap.py  test_capture_hook.py  test_capture_prompt_hook.py  test_classification.py  test_classification_integration.py  test_classification_rules.py  test_cli.py  test_cli_memory.py  test_cli_ui.py  test_client.py  test_conflict_log.py  test_consolidation.py  test_conversation_chunker.py  test_conversation_extractor.py  test_conversation_integration.py  test_conversation_server.py  test_decay_voting.py  test_doctor.py  test_dreams.py  test_dual_embedding.py  test_e2e_integration.py  test_edge_cases.py  test_embedder.py  test_enrichment.py  test_enrichment_integration.py  test_enrichment_llm.py  test_enrichment_memories.py  test_export_integration.py  test_export_json.py  test_export_markdown.py  test_export_schema.py  test_export_serializers.py  test_export_snapshot.py  test_export_types_store.py  test_fact_extraction.py  test_fact_store.py  test_freshness.py  test_github_sync.py  (+69 more)
tools/: openclaw-lore-bridge.py  openclaw-lore-bridge.service
ts/: README.md  package-lock.json  package.json
(+462 files in other folders)
